# computer_vision

./: pyproject.toml
mlflow/: README.md  docker-compose.yml
notebooks/: lab_01.ipynb  vit.ipynb  vit_mlflow.ipynb
